# libvirt-php

./: .gitignore  .gitlab-ci.yml  .gitpublish  .mailmap  AUTHORS  AUTHORS.in  CONTRIBUTING.rst  ChangeLog  INSTALL.PHPEXT  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autobuild.sh  autogen.sh  config.m4  configure.ac  libvirt-php.obs.spec  libvirt-php.spec  libvirt-php.spec.in  libvirt.c  php-libvirt.spec  php-libvirt.spec.in  php_libvirt.h
.github/: lockdown.yml
.github/workflows/: lockdown.yml
ci/: README.rst  gitlab.yml  libvirt-centos-7.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-9.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-rawhide.Dockerfile  libvirt-opensuse-151.Dockerfile  libvirt-ubuntu-1804.Dockerfile  libvirt-ubuntu-2004.Dockerfile  manifest.yml  refresh
ci/buildenv/: alpine-317.sh  alpine-318.sh  alpine-323.sh  alpine-edge.sh  debian-10.sh  debian-11.sh  debian-12.sh  debian-sid.sh  fedora-36.sh  fedora-37.sh  fedora-38.sh  fedora-39.sh  fedora-44.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-leap-153.sh  opensuse-leap-16.sh  opensuse-tumbleweed.sh  ubuntu-2004.sh  ubuntu-2204.sh
ci/containers/: alpine-317.Dockerfile  alpine-318.Dockerfile  alpine-319.Dockerfile  alpine-320.Dockerfile  alpine-323.Dockerfile  alpine-edge.Dockerfile  ci-centos-7.Dockerfile  ci-debian-10.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-opensuse-151.Dockerfile  ci-opensuse-152.Dockerfile  ci-ubuntu-1804.Dockerfile  ci-ubuntu-2004.Dockerfile  debian-10.Dockerfile  debian-11.Dockerfile  debian-12.Dockerfile  debian-13.Dockerfile  debian-sid.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-35.Dockerfile  fedora-36.Dockerfile  fedora-37.Dockerfile  fedora-38.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-43.Dockerfile  fedora-44.Dockerfile  fedora-rawhide.Dockerfile  libvirt-centos-7.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-33.Dockerfile  libvirt-fedora-rawhide.Dockerfile  libvirt-opensuse-151.Dockerfile  (+13 more)
ci/gitlab/: build-templates.yml  builds.yml  container-templates.yml  containers.yml
debian/: changelog  control  copyright  libvirt.ini  php5-libvirt.docs  php5-libvirt.install  rules
doc/: bightml.html
doc/html/: book.libvirt.html  function.libvirt-connect.html  function.libvirt-create-xml.html  function.libvirt-domain-block-stats.html  function.libvirt-domain-create-xml.html  function.libvirt-domain-create.html  function.libvirt-domain-define-xml.html  function.libvirt-domain-destroy.html  function.libvirt-domain-get-connect.html  function.libvirt-domain-get-id.html  function.libvirt-domain-get-info.html  function.libvirt-domain-get-job-info.html  function.libvirt-domain-get-name.html  function.libvirt-domain-get-uuid-string.html  function.libvirt-domain-get-uuid.html  function.libvirt-domain-get-xml-desc.html  function.libvirt-domain-interface-stats.html  function.libvirt-domain-lookup-by-id.html  function.libvirt-domain-lookup-by-name.html  function.libvirt-domain-lookup-by-uuid-string.html  function.libvirt-domain-lookup-by-uuid.html  function.libvirt-domain-memory-peek.html  function.libvirt-domain-memory-stats.html  function.libvirt-domain-migrate-to-uri.html  function.libvirt-domain-migrate.html  function.libvirt-domain-reboot.html  function.libvirt-domain-resume.html  function.libvirt-domain-shutdown.html  function.libvirt-domain-suspend.html  (+28 more)
docs/: Makefile.am  Makefile.in  compiling.html.in  contact.html.in  contributions.html.in  deployment.html.in  distros.html.in  docs.html.in  downloads.html.in  examples.html.in  index.html.in  libvirt.css  links.html.in  news.html.in  news.xsl  page.xsl  references.html.in  roadmap.html.in  search.php  sitemap.html.in  todo.html.in  windows.html.in
examples/: header.php  index.php  libvirt.php
m4/: virt-php-confdir.m4  virt-php-extension.m4  virt-php-extensiondir.m4
src/: Makefile.am  Makefile.in  config.m4  libvirt-connection.c  libvirt-connection.h  libvirt-domain.c  libvirt-domain.h  libvirt-network.c  libvirt-network.h  libvirt-node.c  libvirt-node.h  libvirt-nodedev.c  libvirt-nodedev.h  libvirt-nwfilter.c  libvirt-nwfilter.h  libvirt-php.c  libvirt-php.h  libvirt-php.ini  libvirt-snapshot.c  libvirt-snapshot.h  libvirt-storage.c  libvirt-storage.h  libvirt-stream.c  libvirt-stream.h  libvirt.c  libvirt_php.h  libvirt_php.syms  sockets.c  sockets.h  stdafx.h  typedparams.c  typedparams.h  util.c  util.h  vncfunc.c  vncfunc.h
src/tests/: example-no-disk-and-media.xml  qemu-no-disk-and-media.xml  skipif.inc  test-conn-limit.phpt  test-connect-get-capabilities.phpt  test-connect-get-emulator.phpt  test-connect-get-info.phpt  test-connect-get-machine-types.phpt  test-connect.phpt  test-domain-create-and-coredump.phpt  test-domain-create-and-get-xpath.phpt  test-domain-create-and-shutdown.phpt  test-domain-define.phpt  test-domain-disk.phpt  test-domain-get.phpt  test-domain-lookup-by-name.phpt  test-domain-nic.phpt  test-install.phpt  test-logfile.phpt  test-version-get.phpt
tests/: Makefile.am  check_parameters.php  check_parameters.sh  check_parameters.sh.in  functions.phpt  functions.phpt.in  php.ini  runtests-report.sh  runtests.sh  runtests.sh.in  test-conn-limit.phpt  test-connect.phpt  test-domain-create-and-coredump.phpt  test-domain-create-and-get-xpath.phpt  test-domain-create-get-metadata.phpt  test-domain-create.phpt  test-domain-define-create-destroy.phpt  test-domain-define-undefine.phpt  test-domain-snapshot.phpt  test-get-emulator.phpt  test-get-models-unsupported-hw.phpt  test-get-models.phpt  test-install.phpt  test-logging.phpt  test-version-check.phpt  version-check.phpt  version-get.phpt
tests/data/: example-no-disk-and-media.xml  example-qcow2-disk.xml
tools/: Makefile.am  generate-api-docs.c
winsrc/: libvirt-php.sln  libvirt-php.vcproj  stdafx.cpp  stdafx.h
(+91 files in other folders)
